--- a/res/menu/freifunknord_menu.xml
+++ b/res/menu/freifunknord_menu.xml
@@ -4,6 +4,7 @@
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
+        android:icon="@android:drawable/ic_menu_preferences" 
         android:title="@string/menu_settings"/>
     
     <item
@@ -11,5 +12,13 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_menu_refresh"
         android:title="Liste aktualisieren"/>
+    
+    <item android:id="@+id/WWW"
+        android:showAsAction="never"
+         android:title="@string/WWW" />
+    
+    <item android:id="@+id/feedback"
+        android:showAsAction="never"
+        android:title="@string/feedback" />
 
 </menu>
