--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -6,8 +6,8 @@
 	    <item name="Kiel">Kiel</item>
 	</string-array>
 	<string-array name="ffstaedteValues">
-	    <item name="Hamburg">http://freifunk-gw01.hamburg.ccc.de/ffhhmap/nodes.json</item>
-		<item name="Lübeck">http://188.138.99.158/mesh/nodes.json</item>    
-		<item name="Kiel">http://freifunk.in-kiel.de/ffmap/nodes.json</item>
+	    <item name="Hamburg">@string/nodes_url_hh</item>
+		<item name="Lübeck">@string/nodes_url_hl</item>
+		<item name="Kiel">@string/nodes_url_ki</item>
 	</string-array>
 </resources>
