--- a/discover/src/main/res/xml/pref_data_sync.xml
+++ b/discover/src/main/res/xml/pref_data_sync.xml
@@ -1,5 +1,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <CheckBoxPreference
+        android:key="sync_wifi"
+        android:title="@string/pref_title_sync_wifi"
+        android:summary="@string/pref_description_wifi"
+        android:defaultValue="true" />
+
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
@@ -12,10 +19,5 @@
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
-    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
-         design guidelines. -->
-    <Preference android:title="@string/pref_title_system_sync_settings">
-        <intent android:action="android.settings.SYNC_SETTINGS" />
-    </Preference>
 
 </PreferenceScreen>
