Add capability to change urls of communities within settings

--- a/discover/src/main/res/values/strings_activity_settings.xml
+++ b/discover/src/main/res/values/strings_activity_settings.xml
@@ -8,6 +8,10 @@
     <string name="pref_description_wifi">Ausschalten um Daten auch mit mobilen Daten zu aktualisieren</string>
 
     <string name="pref_title_sync_frequency">Update Interval</string>
+
+    <string name="pref_title_communities">Communities</string>
+
+
     <string-array name="pref_sync_frequency_titles">
         <item>5 Minuten</item>
         <item>10 Minuten</item>
