--- a/discover/src/main/res/xml/pref_data_sync.xml
+++ b/discover/src/main/res/xml/pref_data_sync.xml
@@ -20,4 +20,7 @@
         android:positiveButtonText="@null" />
 
 
-</PreferenceScreen>
+    <PreferenceScreen android:key="communities" android:title="@string/pref_title_communities">
+    </PreferenceScreen>
+
+ </PreferenceScreen>
