Added event bus library otto, Refactored Node- and Nodemap Loading to use AsyncTask

--- a/discover/src/main/res/xml/pref_data_sync.xml
+++ b/discover/src/main/res/xml/pref_data_sync.xml
@@ -27,11 +27,11 @@
         android:defaultValue="false" />
 
     <PreferenceScreen android:key="screen_communities" android:title="@string/pref_title_communities">
-        <Preference
+   <!--     <Preference
             android:key="communities_reset"
             android:summary="Setzt geänderte URLs zurück"
             android:title="Communities zurücksetzen" />
-
+-->
         <PreferenceCategory
             android:key="communities" android:title="@string/pref_title_communities" />
     </PreferenceScreen>
